# PetShop

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  app.py  pyproject.toml
backend/config/: config.py  db.py
backend/config/logging/: logger.py
backend/enums/: __init__.py  achievement.py  audit.py  order.py  store.py  user.py  visit.py
backend/helpers/: __init__.py  datetime.py  geo.py  mongo.py  request.py
backend/middleware/: auth.py  csrf.py  request_id.py
backend/repository/: __init__.py  attendance_repo.py  audit_repo.py  category_repo.py  counter_repo.py  inventory_repo.py  order_repo.py  product_repo.py  rep_target_repo.py  sales_achievement_progress_repo.py  sales_achievement_repo.py  session_repo.py  store_repo.py  subcategory_repo.py  user_repo.py  visit_repo.py
backend/routes/: __init__.py  analytics.py  attendance.py  auth.py  categories.py  health.py  inventory.py  orders.py  products.py  rep_targets.py  sales_achievements.py  stores.py  subcategories.py  users.py  visits.py
backend/schemas/: __init__.py  analytics.py  attendance.py  auth.py  category.py  inventory.py  order.py  product.py  rep_target.py  sales_achievement.py  store.py  subcategory.py  user.py  visit.py
backend/scripts/: seed_admin.py
backend/services/: audit_service.py  order_service.py  product_service.py  rep_analytics_service.py
backend/utils/: auth.py  validation.py
docs/: api.html  pet-shop.postman_collection.json  sample-products.xlsx
